--- a/src/components/ExploreMenu/Explore.css
+++ b/src/components/ExploreMenu/Explore.css
@@ -8,7 +8,7 @@
     font-weight: 500;
 }
 .explore-menu-text{
-    max-width: 60%;
+    max-width: 100%;
     color: #808080;
 }
 .explore-menu-list{
@@ -45,4 +45,10 @@
 .explore-menu-list-item .active{
     border: 4px solid tomato;
     padding: 2px;
+}
+@media (max-width:1050px) {
+    .explore-menu-text{
+        width: 100%;
+        font-size: 14px;
+    }
 }
