--- a/src/pages/PlaceOrder/PlaceOrder.css
+++ b/src/pages/PlaceOrder/PlaceOrder.css
@@ -33,3 +33,19 @@
 .place-order-right .cart-total button{
     margin-top: 30px;
 }
+@media (max-width: 768px) {
+    .place-order {
+      flex-direction: column;
+      gap: 30px;
+    }
+  
+    .place-order-left,
+    .place-order-right {
+      max-width: 100%;
+    }
+  
+    .place-order-left .multi-fields {
+      flex-direction: column;
+    }
+  }
+  
